# car-racing

./: .gitignore  README.md  api.py  integration_plan.md  main.py  pyproject.toml
config/: car_config.ini  fitness.py  neat_config.ini
exports/: Demo_Gen177.racer  Demo_Gen445.racer
race/: race_manager.py
simulation/: car.py  checkpoint.py  track.py  world.py
tracks/: escargot.track  full.track  round.track  wtf.track
training/: config_bridge.py  exporter.py  fitness_evaluator.py  trainer.py
web/: index.html  style.css
web/js/: app.js  canvas.js  chart.js  config_panel.js  editor.js  fitness_editor.js  race.js  training.js
